--- a/src/app/shared/styles/_containers.scss
+++ b/src/app/shared/styles/_containers.scss
@@ -1,3 +1,15 @@
 .container, .container-fluid, .container-xxl, .container-xl, .container-lg, .container-md, .container-sm {
   --bs-gutter-x: 40px;
 }
+
+@media (min-width: 1400px){
+  .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
+      max-width: 1250px;
+  }
+}
+
+@media (min-width: 1200px){
+  .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
+      max-width: 1200px;
+  }
+}
